--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -230,6 +230,10 @@
   "item.nukacraft.scrap": "Scrap Metal",
   "item.nukacraft.combatpipe": "Lead Pipe",
   "item.nukacraft.fusion_core": "Fusion Core",
+  "item.nukacraft.dynamite_stick": "Dynamite Stick",
+  "item.nukacraft.grenade_mirv": "Frag Grenade MIRV",
+  "item.nukacraft.holy_grenade": "Holy Grenade",
+  "item.nukacraft.incendiary_grenade": "Incendiary Grenade",
 
   "item.nukacraft.power_armor_frame": "§3Power Armor Frame",
   "item.nukacraft.jetpack": "Jetpack",
@@ -590,6 +594,7 @@
   "block.nukacraft.expbarrel": "Explosive Barrel",
   "block.nukacraft.powerblock": "Wiring Block",
   "block.nukacraft.acid_dirt": "Acid Dirt",
+  "block.nukacraft.pa_station_block": "Power Armor Station",
   "block.nukacraft.ash_stone": "Ash Stone",
   "block.nukacraft.rustsupportwall": "Support Crossbar",
   "block.nukacraft.rustsupporttop": "Support Crossbar",
