--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -670,6 +670,20 @@
   "item.nukacraft.round50": ".50 Патрон",
   "item.nukacraft.round556": "Патрон 5.56",
   "item.nukacraft.round5mm": "Патрон 5мм",
+  "item.nukacraft.round10mm_piercing": "Бронебойный Патрон 10мм",
+  "item.nukacraft.round38_piercing": "Бронебойный .38 Патрон",
+  "item.nukacraft.round45_piercing": "Бронебойный .45 Патрон",
+  "item.nukacraft.classic_laser_pistol": "Классичейский Лазерный Пистолет",
+  "item.nukacraft.cocktail_molotov": "Коктейль Молотова",
+  "item.nukacraft.molotov_cola": "Молотов Кола",
+  "item.nukacraft.flame_floater_grenade": "Граната Огненного Плавуна",
+  "item.nukacraft.round5mm_piercing": "Бронебойный Патрон 5мм",
+  "item.nukacraft.round50_piercing": "Бронебойный .50 Патрон",
+  "item.nukacraft.round380_piercing": "Бронебойный .380 Патрон",
+  "item.nukacraft.round556_piercing": "Бронебойный Патрон 5.56",
+  "item.nukacraft.round127_piercing": "Бронебойный Патрон 12.7мм",
+  "item.nukacraft.round22_piercing": "Бронебойный Патрон 22LR",
+  "item.nukacraft.round44_piercing": "Бронебойный .44 Патрон",
   "item.nukacraft.rubber": "Резина",
   "item.nukacraft.saturnite_ingot": "Сатурнитовый Слиток",
   "item.nukacraft.scarletflux": "Алый Флюс",
