--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -103,7 +103,8 @@
   "item.nukacraft.stock_shield": "Heavy Weapons: Ballistic Shield",
 
 
-
+  "item.nukacraft.repair_kit": "Repair Kit",
+  "item.nukacraft.elite_repair_kit": "Super Repair Kit",
   "item.nukacraft.acid": "Acid",
   "item.nukacraft.handmade_spear": "Handmade Spear",
   "item.nukacraft.adhesive": "Adhesive",
