--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -634,6 +634,7 @@
   "block.nukacraft.whitebricks_slab": "White Brick Slab",
   "block.nukacraft.quarts_ore": "Quartz Ore",
   "block.nukacraft.dinnerchair": "Dinner Bench",
+  "block.nukacraft.door_terminal": "Door Control Panel",
   "block.nukacraft.writtingdesk1": "Writting Desk",
   "block.nukacraft.writtingdesk2": "Writting Desk",
   "block.nukacraft.writtingdesk3": "Writting Desk",
