--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -33,6 +33,7 @@
   "block.nukacraft.acid_dirt": "Кислотная Земля",
   "block.nukacraft.alumi_block": "Алюминиевый Блок",
   "block.nukacraft.aluminium_ore": "Алюминиевая Руда",
+  "block.nukacraft.door_terminal": "Панель Управления",
   "block.nukacraft.armedglass": "Усиленная Стеклянная Панель",
   "block.nukacraft.army_theatre_chair": "Сиденье Армейского Театра",
   "block.nukacraft.ash_smoker": "Пепельный Гейзер",
